@@ -174,7 +174,7 @@ BYTECOMPFLAGS="-L ."
 elisp-compile() {
 	ebegin "Compiling GNU Emacs Elisp files"
 	${EMACS} ${EMACSFLAGS} ${BYTECOMPFLAGS} -f batch-byte-compile "$@"
-	eend $? "batch-byte-compile failed"
+	eend $? "elisp-compile: batch-byte-compile failed"
 }
 
 # #FUNCTION: elisp-comp
@@ -219,8 +219,7 @@ elisp-comp() {
 	popd
 	rm -fr ${tempdir}
 
-	eend ${ret} "batch-byte-compile failed"
-	return ${ret}
+	eend ${ret} "elisp-comp: batch-byte-compile failed"
 }
 
 # @FUNCTION: elisp-emacs-version
@@ -266,7 +265,7 @@ elisp-make-autoload-file() {
 		--eval "(setq generated-autoload-file (expand-file-name \"${f}\"))" \
 		-f batch-update-autoloads "${@-.}"
 
-	eend $? "batch-update-autoloads failed"
+	eend $? "elisp-make-autoload-file: batch-update-autoloads failed"
 }
 
 # @FUNCTION: elisp-install
@@ -282,7 +281,7 @@ elisp-install() {
 		insinto "${SITELISP}/${subdir}"
 		doins "$@"
 	)
-	eend $? "doins failed"
+	eend $? "elisp-install: doins failed"
 }
 
 # @FUNCTION: elisp-site-file-install
@@ -302,7 +301,7 @@ elisp-site-file-install() {
 	)
 	ret=$?
 	rm -f "${sf}"
-	eend ${ret} "doins failed"
+	eend ${ret} "elisp-site-file-install: doins failed"
 }
 
 # @FUNCTION: elisp-site-regen
@@ -321,7 +320,7 @@ elisp-site-regen() {
 	local tmpdir=${T:-$(mktemp -d)}
 
 	if [ ! -d "${ROOT}${SITELISP}" ]; then
-		eerror "Directory ${SITELISP} does not exist"
+		eerror "elisp-site-regen: Directory ${SITELISP} does not exist"
 		return 1
 	fi
 
